fix: fixed small style changes on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@ body {
 }
 
 .gradient-btn {
-	background: linear-gradient(215.72deg, #53646f 0%, #000000 98.45%);
+	background: linear-gradient(185.72deg, #53646f 0%, #000000 98.45%);
 }
 .gradient-ftr {
 	background: linear-gradient(256.46deg, #4d5b66 1.16%, #080a0b 94.63%);
